// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<span
  className="cf-modal__close"
  onClick={[Function]}
>
  <i
    className="cf-13pkyl4"
  >
    <span
      className="cf-1u9fru1"
    />
  </i>
</span>
`;

exports[`should render with a label 1`] = `
<span
  className="cf-modal__close"
  onClick={[Function]}
>
  <i
    className="cf-13pkyl4"
  >
    <span
      className="cf-1u9fru1"
    >
      label
    </span>
  </i>
</span>
`;
